--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -47,7 +47,7 @@ layout: default
         </div>
     {% endfor %}
     <div class="w-full lg:w-1/3">
-            <a href="{{ site.baseurl }}/ss"{% if clink.cnewtab == true %} target="_blank" rel="noopener"{% endif %}>
+            <a href="{{ site.baseurl }}/tss"{% if clink.cnewtab == true %} target="_blank" rel="noopener"{% endif %}>
                 <div class="w-11/12 my-1 mx-auto md:my-2 h-40 lg:h-64 rounded-lg bg-gray-700 overflow-hidden shadow-xl cbsitehover2 relative cursor-pointer fade-in-fwd">
                     <div class="bg-center bg-cover absolute cbsitehover" style="background-image: url('media/demo04.jpg');">
                     </div>
