--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <link href="{{ site.baseurl }}/assets/styles-page.css" rel="stylesheet">
-<div class="layoutpage mx-auto pt-2 pb-8 px-2">
+<div class="layoutpage mx-auto pt-2 pb-8 px-2"style="float:left;max-width:50%;">
     {{ content }}
+</div>
+<div class="layoutpage mx-auto pt-2 pb-8 px-2" style="float:left;max-width:50%;">
+    <canvas id='c'></canvas>
 </div>
