--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -111,14 +111,11 @@ layout: compress
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
     <script>
     if ( $(window).width() < 739) {      
-    <script type="text/javascript" 
-src="assets/scriptm.js"></script>  
-} 
-else {
-<script type="text/javascript" 
-src="assets/script.js"></script>  
-}
-</script>
+    <script type="text/javascript" src="assets/scriptm.js"></script>  
+    } 
+    else {<script type="text/javascript" src="assets/script.js"></script>  
+    }
+    </script>
     
 
 </body>
