--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -112,7 +112,9 @@ layout: compress
     
     <script> if ($(window).width() < 739){   
     <script type="text/javascript" src="assets/scriptm.js"></script>}  
-    else {<script type="text/javascript" src="assets/script.js"></script>}
+    else { <script type="text/javascript" src="assets/script.js"></script> }
+    </script
+    
    
 </body>
 </html>
