--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -111,8 +111,8 @@ layout: compress
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
     
  
-  //  if ($(window).width() < 739){   
-           <script type="text/javascript" src="assets/scriptm.js"></script>
+   
+           <script type="text/javascript" src="{{ site.baseurl }}/assets/scriptm.js"></script>
        
     
    
