--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -109,11 +109,6 @@ layout: compress
     <script type="text/javascript" src="{{ site.baseurl }}/assets/clipboard.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
-    <script>
-    if (document.documentElement.clientWidth < 900) {
-	<script type="text/javascript" src="{{ site.baseurl }}/assets/scriptm.js"></script>
-    }
-    else {
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/script.js"></script> } </script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/media.js"></script>
 </body>
 </html>
