--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -110,7 +110,7 @@ layout: compress
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
     <script type="text/javascript" src="{{ site.baseurl }}/assets/media.js"></script>
-    <div id="s"></div>
+    <div id="s">t</div>
     
 </body>
 </html>
