--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -109,7 +109,8 @@ layout: compress
     <script type="text/javascript" src="{{ site.baseurl }}/assets/clipboard.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/script.js"></script>
+    if( /Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)){}
+    else{ document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/script"><\/script>');}
 
     
 </body>
