--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -109,9 +109,10 @@ layout: compress
     <script type="text/javascript" src="{{ site.baseurl }}/assets/clipboard.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
+    <script>
     if( /Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)){}
     else{ document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/script"><\/script>');}
-
+    </script>
     
 </body>
 </html>
