--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -111,7 +111,7 @@ layout: compress
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
     <script>
     if( /Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)){}
-    else{ document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/script"><\/script>');}
+    else{ document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/script.js"><\/script>');}
     </script>
     
 </body>
