--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -110,7 +110,8 @@ layout: compress
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js'></script>
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
     <script>
-    if( /Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)){}
+    if( /Android|webOS|iPhone|iPod|iPad|BlackBerry/i.test(navigator.userAgent)){
+        document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/scriptm.js"><\/script>');}
     else{ document.write('<script type="text/javascript" src="{{ site.baseurl }}/assets/script.js"><\/script>');}
     </script>
     
